--- a/VV570/HW1/assignment.tex
+++ b/VV570/HW1/assignment.tex
@@ -53,7 +53,7 @@
 
 \author{Yu Cang \\ 018370210001} % Your name
 
-\date{\normalsize May 23, 2018} % Today's date or a custom date
+\date{\normalsize \today} % Today's date or a custom date
 
 \begin{document}
 
@@ -187,7 +187,7 @@
 		
 		\begin{proof}
 			Let $E$ be an inner product space over $\mathbb{C}$, and $u, v\in E$.\\
-			Given $Y$ defined as below, where $\lambda \in \mathbb{R}$.
+			Given $Y$ defined as below, where $\lambda \in \mathbb{C}$.
 						
 			\begin{equation}
 				Y = {\vert u-\lambda v \vert}^2
@@ -226,7 +226,7 @@
 		\begin{proof}
 			Let $E$ be an inner product space over $\mathbb{C}$, and $u, v\in E$.\\
 			
-			Given $Y$ defined as below, where $\lambda \in \mathbb{R}$.
+			Given $Y$ defined as below, where $\lambda \in \mathbb{C}$.
 			
 			\begin{equation}
 				\begin{aligned}
@@ -405,10 +405,10 @@
 		\begin{proof}
 			Let $x_0 = 0, x_1 = \frac{\pi}{2n}$, then
 			\begin{equation}
-				\lim\limits_{n->+\infty} \vert x_1-x_0 \vert = 0
+				\lim\limits_{n \rightarrow +\infty} \vert x_1-x_0 \vert = 0
 			\end{equation}
 			\begin{equation}
-				\lim\limits_{n->+\infty} \vert df_n(x_1) - df_n(x_0) \vert = \vert 0-dx \vert = |dx| \neq 0
+				\lim\limits_{n \rightarrow +\infty} \vert df_n(x_1) - df_n(x_0) \vert = \vert 0-dx \vert = |dx| \neq 0
 			\end{equation}
 			Thus, the differential is not continous when n tends to infty.
 		\end{proof}
