--- a/VV570/HW3/assignment.tex
+++ b/VV570/HW3/assignment.tex
@@ -66,12 +66,54 @@
 \section{Cantor's Set}
 	\begin{enumerate}
 		\item
-	
+			\begin{proof}
+				As $C_i$ is closed and $C$ is the intersection of these closed sets, $C$ is closed.\\
+				It's clear that $C$ is bounded. Thus, by Heine-Borel theorem, $C$ is compact.
+			\end{proof}
 		\item
-	
+			\begin{proof}
+				Suppose $x \in C_m$, $y \in C_n$ and $x < y$. There are $2^m$ subsets in $C_m$ and the length of each subset is $\frac{1}{3^m}$. Also, there are $2^n$ subsets in $C_n$ and the length of each subset is $\frac{1}{3^n}$. As $C \subset C_m \cap C_n$, suppose $ m \leq n$, there must exist a subset in $C_n$ s.t. $x \in C_n$. \\
+				If $x$ and $y$ lie in the same subset of $C_n$, with further division of the subset, there will be a gap between $x$ and $y$, thus, there exists an element $z$ lies in the gap and satisfies $x < z < y$.\\
+				If $x$ and $y$ lie in different subsets of $C_n$, denoted as $C_{n, i}$ and $C_{n, j}$,it's obvious that such a $z$ exists in the gap between $C_{n, i}$ and $C_{n, j}$ and satisfies $x < z < y$.
+			\end{proof}
 		\item 
+			\begin{enumerate}
+				\item
+					0
+				\item
+					\begin{proof}
+						As there are $2^n$ subsets in $C_n$ and the length of each subset is $\frac{1}{3^n}$, thus the Lebesgue measure of $C_n$ is the sum of the Lebesgue measure of each closed subset. Thus $\lambda(C_n) = (\frac{2}{3})^n$.\\
+						As $C = \bigcap\limits_{n=1}^{\infty} C_n$, then $\lambda(C) \leq \lambda(C_n) = (\frac{2}{3})^n$, thus $\lambda(C) = 0$.
+					\end{proof}
+			\end{enumerate}
+		\item 
+			\begin{enumerate}
+				\item 
+					\begin{proof}
+						As the end points of each subset in $C_n$ is not removed in any subdivision, thus $C$ is not empty.
+					\end{proof}
+				\item 
+					\begin{equation}
+						x = \sum_{i=1}^{\infty} \frac{a_i}{3^i}, \ \ \text{with $a_i \in \{0, 2\}$}
+					\end{equation}
+				\item 
+					Consider the $i-th$ digit in elemnet $s_i$, it will be possible to construct such an element that the $i-th$ digit is different from that in $s_i$, thus $s$ is not included in the original list.
+				\item 
+					\begin{proof}
+						Suppose $C$ is countable, express each $x \in C$ in ternary form, then each digit in $x$ is either 0 or 2. Thus, the choice of each digit appears to be binary. Consider the $i-th$ digit in elemnet $x_i$, it will be possible to construct such an element $t$, whose $i-th$ digit is different from that in $x_i$(complementary). Thus $t$ is not included in the original list, which implies the assumption fails.
+					\end{proof}
+			\end{enumerate}
 		
 		\item 
+			Althouth $C$ is uncountable, but the measure of its complement is 1, which is illustrated below, thus the measure of $C$ is 0.		
+			\begin{equation}
+				\begin{aligned}
+					\lambda(C^c) & = \frac{1}{3} + 2 * \frac{1}{9} + ... \\
+					             & = \frac{1}{3}\sum_{i=0}^{\infty} (\frac{2}{3})^n\\
+					             & = \frac{1}{3} \lim\limits_{n\rightarrow\infty}\frac{1-(2/3)^n}{1-(2/3)}\\
+					             & = 1
+          		\end{aligned}
+			\end{equation} 
 		
 	\end{enumerate}
 
